# chapro-openmha-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile-libopenmha-simplified  README.md  Toolchain-arm-linux-gnueabihf-8.cmake  chapro.cfg  chapro_afc.cfg
bbb/: Toolchain-arm-linux.cmake  build
chapro-openmha-plugin/: CMakeLists.txt  main.cpp
chapro-openmha-plugin.xcodeproj/: project.pbxproj
chapro-openmha-plugin.xcodeproj/xcuserdata/basset.xcuserdatad/xcschemes/: xcschememanagement.plist
chapro-openmha-plugin/chapro-openmha-plugin/: CMakeLists.txt  chapro-openmha-plugin-AFC.cpp  chapro-openmha-plugin.cpp
chapro-openmha-plugin/chapro-openmha-plugin.xcodeproj/: project.pbxproj
chapro-openmha-plugin/chapro-openmha-plugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
chapro-openmha-plugin/chapro-openmha-plugin/include/chapro-openmha-plugin/: HearingAid.h
chapro-openmha-plugin/chapro-openmha-plugin/src/: HearingAid.cpp
chapro-openmha-plugin/google-tests/: AfcHearingAidTests.cpp  CMakeLists.txt  HearingAidBuilderTests.cpp  HearingAidInitializationTests.cpp  HearingAidTests.cpp  LogString.h  assert-utility.h
chapro-openmha-plugin/hearing-aid/: CMakeLists.txt
chapro-openmha-plugin/hearing-aid/include/hearing-aid/: AfcHearingAid.h  HearingAid.h  HearingAidBuilder.h  HearingAidInitialization.h
chapro-openmha-plugin/hearing-aid/src/: AfcHearingAid.cpp  HearingAid.cpp  HearingAidBuilder.cpp  HearingAidInitialization.cpp
docker/arm-linux-gnueabihf/: Dockerfile
docker/both/: Dockerfile
docker/clang/: Dockerfile
docker/gcc/: Dockerfile
docker/mingw/: Dockerfile
docker/osxcross/: Dockerfile
docker/x86_64-w64-mingw32/: Dockerfile
google-tests/: CMakeLists.txt  assert-utility.h
