cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(chapro-openMHA-plugin)
option(ENABLE_TESTS "Enable tests" OFF)
set(CHAPRO_OPENMHA_PLUGIN_PRIVATE_WARNINGS -Wall -Wextra -pedantic -Werror)
set(CHAPRO_OPENMHA_PLUGIN_PRIVATE_OPTIMIZATIONS -O3)
set(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY true)
if (${ENABLE_TESTS})
    enable_testing()
    add_subdirectory(googletest EXCLUDE_FROM_ALL)
    add_subdirectory(google-tests)
endif()
add_subdirectory(GSL EXCLUDE_FROM_ALL)
add_subdirectory(chapro-openmha-plugin)
